addedd response wrapper

--- a/reference-data-api/pom.xml
+++ b/reference-data-api/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.cradle</groupId>
+			<artifactId>insurance-project</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
